[package]
name = "evaluator"
version = "1.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "evaluator"

[dependencies]
anyhow = "1.0.70"
slice-group-by = "0.3.0"
config = "0.13.3"
lazy_static = "1.4.0"
rayon = "1.7.0"
regex = "1.7.3"
lapin = "2.3.1"
tokio = { version = "1", features = [ "full", "macros" ] }
futures-lite = "1.13.0"
tokio-executor-trait = "2.1.1"
tokio-reactor-trait = "1.1.0"
serde = { version = "1.0.183", features = ["serde_derive"] }
serde_json = "1.0.105"
redis = "0.23.2"
primitypes = { path = "../primitypes" }
[dev-dependencies]
pretty_assertions = "1.3.0"

[package.metadata]
cargo-test = ["--", "--test-threads=1", "--show-output"]

[profile.release]
debug = 1

#[target.'cfg(linux)'.dependencies]
#minijail = { path = "../minijail" } # provided by ebuild
