[package]
name = "evaluator"
version = "1.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "evaluator"

[dependencies]
anyhow = "1.0.79"
slice-group-by = "0.3.1"
config = "0.13.4"
lazy_static = "1.4.0"
rayon = "1.8.0"
regex = "1.10.2"
lapin = "2.3.1"
tokio = { version = "1", features = [ "full", "macros" ] }
futures-lite = "2.2.0"
tokio-executor-trait = "2.1.1"
tokio-reactor-trait = "1.1.0"
serde = { version = "1.0.195", features = ["serde_derive"] }
serde_json = "1.0.111"
redis = "0.24.0"
primitypes = { path = "../primitypes" }
uuid = "1.6.1"
openssl = { version = "0.10.62", features = ["vendored"] }
dotenv = "0.15.0"
dotenvy = "0.15.7"
secrecy = "0.8.0"
futures = "0.3.30"
async-trait = "0.1.77"
flume = "0.11.0"
tokio-scoped = "0.2.0"
itertools = "0.12.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
bb8-lapin = "0.5.0"
bb8 = "0.8.1"
reqwest = "0.11.24"
async-stream = "0.3.5"
futures-core = "0.3.30"
bincode = "1.3.3"
fred = { version = "8.0.5", features = ["enable-rustls"] }
ts-rs = { version = "8.0.0", features = ["uuid-impl"] }
num_cpus = "1.16.0"
[dependencies.sqlx]
version = "0.7.3"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "rust_decimal", "json", "bit-vec"]

[dev-dependencies]
pretty_assertions = "1.4.0"
test-log = "0.2.15"

[package.metadata]
cargo-test = ["--", "--test-threads=1", "--show-output"]

#[profile.release]
#debug = 1

#[target.'cfg(linux)'.dependencies]
#minijail = { path = "../minijail" } # provided by ebuild
